--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3.26"
 bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
